2011-10-16  Karl Berry  <karl@gnu.org>

	* AUTHORS, INSTALL, INTRODUCTION, NEWS, README, README-alpha,
	README.dev, TODO, */README: small text updates.

	* doc/texinfo.txi (Not Ending a Sentence): also mention right quote
	and brackets.

2011-10-15  Karl Berry  <karl@gnu.org>

	* system.h: rm decls for xmalloc, xrealloc, xstrdup.
	rm old DMALLOC debugging stuff.

	* gnulib: switch from now-deprecated getopt to getopt-gnu,
	likewise strdup to strdup-posix.
	rm gnulib module xsetenv, was only used in C makeinfo.

2011-10-15  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Other Configuration Variables): USE_SECTIONS is
	not used anymore, the same effect is obtained by setting USE_NODES
	to false.

2011-10-14  Karl Berry  <karl@gnu.org>

	* lib/substring.c: remove, only used in C makeinfo, no longer built.
	Leaving us with just xexit in lib, but that still seems useful.

2011-10-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Three Arguments): same requirements as node names.

2011-10-13  Patrice Dumas  <pertusus@free.fr>

	* info-stnd.texi: change @itemx to a missing @item.
	* po/POTFILES.in, configure.ac, po_document/POTFILES.in: remove references
	to makeinfo/ and texi2html/.
	* doc/Makefile.am (MAKEINFO, man_rule_0): use tp/texi2any.pl or 
	tp/makeinfo to regenerate info and man pages.

2011-10-11  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_INIT): version 4.13.90.
	(AM_INIT_AUTOMAKE): dist-xz rather than lzma.

	* configure.ac (AC_CONFIG_SRCDIR): look for info.c, not makeinfo.c.
	(AC_CONFIG_FILES),
	* Makefile.am (SUBDIRS): remove makeinfo.
	(DIST_SUBDIRS): no need.

2011-10-01  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Generic Translator texi2any/makeinfo): adapt to
	the new implementation in tp/.
	* configure.ac, tp/Makefile.am: add an automake conditional to avoid 
	doing tp tests if dependencies are missing.

2011-09-30  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (texi2any Output Customization), 