@@ -1,12 +1,27 @@
 #! /usr/bin/perl -w
+#
+# Copyright 2011 Free Software Foundation, Inc.
+#
+# This file is free software; as a special exception the author gives
+# unlimited permission to copy and/or distribute it, with or without
+# modifications, as long as this notice is preserved.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
+# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+#
+# Originally written by Patrice Dumas.
 
 use strict;
-
 use File::Find;
 
 my %files;
-find (\&wanted, ('t'));
 
+(my $mydir = $0) =~ s,/[^/]+$,,;
+chdir("$mydir/..") || die "chdir $mydir/..: $!";
+-d "t" || (die "goodbye, no t directory in " . `pwd`);
+
+find (\&wanted, ('t'));
 sub wanted 
 {
   if (/\.pl$/ and $File::Find::dir =~ /^t\/results\//) {
@@ -15,25 +30,16 @@ sub wanted
 }
 
 my %new_files = %files;
-
-open (FILE, "MANIFEST") or die "Open MANIFEST: $!\n";
-
+open (FILE, "MANIFEST") or die "Open MANIFEST: $!";
 while (<FILE>) {
   chomp;
   delete ($new_files{$_});
 }
+#print join("\n", sort(keys(%new_files))) ."\n";
 
-print join("\n", sort(keys(%new_files))) ."\n";
-
-#if (! -d "tmp") {
-#  mkdir "tmp" or die "mkdir tmp: $!\n";
-#}
-#open (OUT, '>maintain/MANIFEST_test_results') or die "Open maintain/MANIFEST_test_results: $!\n";
-open (INCLUDE, '>Makefile.incl') or die "Open Makefile.incl: $!\n";
+open (INCLUDE, '>Makefile.tres') or die "Open >Makefile.treas: $!";
 print INCLUDE "test_results =";
-
 foreach my $file (sort(keys(%files))) {
-#  print OUT "$file\n";
-  print INCLUDE " \\\n\t$file";
+  print INCLUDE " \\\n  $file";
 }
-print INCLUDE "\n\n";
+print INCLUDE "\n";
